test/typecheck/errors/bad-views2.boa
subv := 2;

view subv {
	o: output sum of int;
}
